# mistral-srt-ai-gen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: preview-release.yml
src/: key_rotator.rs  main.rs
test_data/: sample-voxtral.json  sample.webm
