[package]
name = "mistral-srt-ai-gen"
version = "0.1.0"
edition = "2021"
description = "A tool to generate SRT files from audio/video files using Mistral AI services"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.18"
mime = "0.3"
mime_guess = "2.0"
futures = "0.3"
rand = "0.8"
ffmpeg-next = "8.1.0"

[dev-dependencies]
mockito = "1.0"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.1.4"